# Bugy

./: CMakeLists.txt  README.md  gyro.cpp  gyro.h  main.cpp  makefile
